--- a/index.html
+++ b/index.html
@@ -3,18 +3,41 @@
 <head>
 </head>
 <body>
+  <h1>Guess The Number!</h1>
 	<script>
         let num = Math.floor(Math.random() * 11);
 
+        //will turn true if right number is given
+        let gotIt = false;
         let guess = prompt("guess a number between 1 and 10");
+        let numGuesses = 0; //will store total number of guesses
 
-        if(num == guess)
-        {
-            alert("Got it!");
-        }else{
-            alert("Sorry!  You guessed " + guess + " and the number was " + num);
+        while(gotIt === false){
+          numGuesses++;//increment
+          if(num == guess)
+        {//true - tell user and break out of loop
+            //alert("Got it!");
+            //break out of loop
+            gotIt = true;
+        }else{//false - tell user to guess again
+
+          if(num > guess){//higher
+            guess = prompt("Higher");
+
+          }else{//lower
+            guess = prompt("Lower");
+
+          }
+
+            //alert("Sorry!  You guessed " + guess + " and the number was " + num);
+            //alert("Wrong Number!");
+            
         }
+       }
 
+        alert("Got It! You guessed " + numGuesses + " times!");
+
+        
 	</script>
 </body>
 </html>
