Adds correct number to alert

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
        }
 
-        alert("Got It! You guessed " + numGuesses + " times!");
+        alert("Bingo! The correct number is " + num + ". \nIt took you " + numGuesses + " guesses!" + "\nRefresh to guess again.");
 
         
 	</script>
